@@ -14,37 +14,45 @@ import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
+import java.nio.file.StandardCopyOption;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
 @Service
 public class ModelHashRegistry {
-    private static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(ModelHashRegistry.class);
-    private final String HASH_FILE = "model_hashes.json";
-    private final Map<String, CacheEntry> cache = new HashMap<>();
-    private final Map<String, String> hashToPath = new HashMap<>();
-    private boolean dirty = false;
+
+    private static final Logger logger = LoggerFactory.getLogger(ModelHashRegistry.class);
+    private static final String HASH_FILE = "model_hashes.json";
+
+    private final Map<String, CacheEntry> cache = new ConcurrentHashMap<>();
+    private final Map<String, String> hashToPath = new ConcurrentHashMap<>();
+    private final Object saveLock = new Object();
+    private volatile boolean dirty = false;
 
     private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
-        Thread t = new Thread(r, "ModelHashRegistry-Flusher");
-        t.setDaemon(true);
+        Thread t = Thread.ofVirtual().name("ModelHashRegistry-Flusher").unstarted(r);
         return t;
     });
 
-    @Autowired
     private ConfigService configService;
-
-    @Autowired
     private IModelValidator validator;
 
+    public ModelHashRegistry() {}
+
+    @Autowired
+    public ModelHashRegistry(ConfigService configService, IModelValidator validator) {
+        this.configService = configService;
+        this.validator = validator;
+    }
+
     private static class CacheEntry {
-        String hash;
-        long size;
-        long lastModified;
+        final String hash;
+        final long size;
+        final long lastModified;
 
         CacheEntry(String hash, long size, long lastModified) {
             this.hash = hash;
@@ -54,10 +62,15 @@ public class ModelHashRegistry {
     }
 
     @PostConstruct
-    public synchronized void load() {
+    public void load() {
+        if (configService == null) {
+            logger.warn("ConfigService not injected yet in ModelHashRegistry");
+            return;
+        }
+
         try {
             File file = configService.getFileInAppData(HASH_FILE);
-            if (file.exists()) {
+            if (file != null && file.exists()) {
                 String content = Files.readString(file.toPath(), StandardCharsets.UTF_8);
                 JSONObject json = new JSONObject(content);
                 for (String path : json.keySet()) {
@@ -65,7 +78,7 @@ public class ModelHashRegistry {
                     String hash = entry.getString("hash");
                     long size = entry.optLong("size", 0);
                     long lm = entry.optLong("lastModified", 0);
-                    
+
                     if (new File(path).exists()) {
                         cache.put(path, new CacheEntry(hash, size, lm));
                         hashToPath.put(hash, path);
@@ -73,9 +86,9 @@ public class ModelHashRegistry {
                 }
             }
         } catch (Exception e) {
-            logger.error("Error loading hash registry: " + e.getMessage());
+            logger.error("Error loading hash registry: {}", e.getMessage(), e);
         }
-        
+
         // Schedule periodic save check every 5 seconds
         scheduler.scheduleWithFixedDelay(this::saveIfDirty, 5, 5, TimeUnit.SECONDS);
     }
@@ -94,57 +107,70 @@ public class ModelHashRegistry {
         saveIfDirty();
     }
 
-    private synchronized void saveIfDirty() {
+    private void saveIfDirty() {
         if (dirty) {
             save();
         }
     }
 
-    public synchronized void save() {
-        try {
-            JSONObject json = new JSONObject();
-            for (Map.Entry<String, CacheEntry> e : cache.entrySet()) {
-                JSONObject obj = new JSONObject();
-                obj.put("hash", e.getValue().hash);
-                obj.put("size", e.getValue().size);
-                obj.put("lastModified", e.getValue().lastModified);
-                json.put(e.getKey(), obj);
-            }
-            
-            File targetFile = configService.getFileInAppData(HASH_FILE).getAbsoluteFile();
-            File parentDir = targetFile.getParentFile();
-            if (parentDir != null && !parentDir.exists()) {
-                parentDir.mkdirs();
-            }
-            
-            Path targetPath = targetFile.toPath();
-            Path tempPath = targetPath.getParent().resolve(HASH_FILE + ".tmp");
-            Files.writeString(tempPath, json.toString(2), StandardCharsets.UTF_8);
+    public void save() {
+        synchronized (saveLock) {
+            if (configService == null) return;
             try {
-                Files.move(tempPath, targetPath, java.nio.file.StandardCopyOption.REPLACE_EXISTING, java.nio.file.StandardCopyOption.ATOMIC_MOVE);
-            } catch (Exception moveEx) {
-                Files.move(tempPath, targetPath, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+                JSONObject json = new JSONObject();
+                for (Map.Entry<String, CacheEntry> e : cache.entrySet()) {
+                    JSONObject obj = new JSONObject();
+                    obj.put("hash", e.getValue().hash);
+                    obj.put("size", e.getValue().size);
+                    obj.put("lastModified", e.getValue().lastModified);
+                    json.put(e.getKey(), obj);
+                }
+
+                File targetFile = configService.getFileInAppData(HASH_FILE).getAbsoluteFile();
+                File parentDir = targetFile.getParentFile();
+                if (parentDir != null && !parentDir.exists()) {
+                    parentDir.mkdirs();
+                }
+
+                Path targetPath = targetFile.toPath();
+                Path tempPath = targetPath.getParent().resolve(HASH_FILE + ".tmp");
+                Files.writeString(tempPath, json.toString(2), StandardCharsets.UTF_8);
+                try {
+                    Files.move(tempPath, targetPath, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
+                } catch (Exception moveEx) {
+                    Files.move(tempPath, targetPath, StandardCopyOption.REPLACE_EXISTING);
+                }
+
+                dirty = false;
+            } catch (Exception e) {
+                logger.error("Error saving hash registry: {}", e.getMessage(), e);
             }
-            
-            dirty = false;
-        } catch (Exception e) {
-            logger.error("Error saving hash registry: " + e.getMessage());
-            e.printStackTrace();
         }
     }
 
-    public synchronized String getOrCalculateHash(File file) {
+    /**
+     * Retrieves cached hash or calculates it without holding a global lock during heavy I/O.
+     */
+    public String getOrCalculateHash(File file) {
+        if (file == null || !file.exists()) {
+            return null;
+        }
+
         String path = file.getAbsolutePath();
         long currentSize = file.length();
         long currentLm = file.lastModified();
 
-        if (cache.containsKey(path)) {
-            CacheEntry entry = cache.get(path);
-            if (entry.size == currentSize && entry.lastModified == currentLm) {
-                return entry.hash;
-            }
+        CacheEntry entry = cache.get(path);
+        if (entry != null && entry.size == currentSize && entry.lastModified == currentLm) {
+            return entry.hash;
         }
 
+        if (validator == null) {
+            logger.warn("IModelValidator not configured in ModelHashRegistry");
+            return null;
+        }
+
+        // Heavy I/O is performed without holding a global lock
         String hash = validator.calculateHash(file);
         if (hash != null) {
             cache.put(path, new CacheEntry(hash, currentSize, currentLm));
@@ -154,11 +180,13 @@ public class ModelHashRegistry {
         return hash;
     }
 
-    public synchronized Optional<String> findPathByHash(String hash) {
+    public Optional<String> findPathByHash(String hash) {
+        if (hash == null) return Optional.empty();
         return Optional.ofNullable(hashToPath.get(hash));
     }
 
-    public synchronized void unregister(File file) {
+    public void unregister(File file) {
+        if (file == null) return;
         String path = file.getAbsolutePath();
         CacheEntry entry = cache.remove(path);
         if (entry != null) {
